# json-schema-viewer

./: .flake8  .gitignore  .isort.cfg  LICENSE  Makefile  Pipfile  README.md  build.py  package-lock.json  package.json  pyproject.toml  vercel-build.sh  vercel.json
.github/: dependabot.yml
.github/workflows/: test.yml
api/: index.py
lib/: filesystem.py  http.py  renderer.py  schema.py
public/: index.html
tests/: test_api.py  test_renderer.py  test_schema.py
